Fix: estaba mal el input de d_type

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <%= form.hidden_field :c_type, value: @d_type %>
+  <%= form.hidden_field :d_type, value: @d_type %>
 
   <div class="row">
     <%= form.submit "Guardar", class: "btn u-btn-primary mr-2" %>
