Cambiada la clase conteiner por conteiner-fluid

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'layouts/nav' %>
-    <main class="container">
+    <main class="container-fluid">
       <%= yield %>
     </main>
   </body>
