--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,36 +1,36 @@
 <%= form_with(model: person, id: 'form-person',class: 'g-brd-around g-brd-gray-light-v4 g-pa-20 g-mb-10', multipart: true, local: true ) do |form| %>
   <div class="form-group row g-mb-10">
-    <%= form.label :legajo, 'Nº legajo (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
-    <div class="col-sm-9">
+    <%= form.label :legajo, 'Nº legajo (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
+    <div class="col-sm-6 col-md-6 col-lg-4">
       <%= form.text_field :legajo, class: "form-control", required: true  %>
     </div>
   </div>
   <div class="form-group row g-mb-10">
-    <%= form.label :last_name, 'Apellido (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
-    <div class="col-sm-9">
+    <%= form.label :last_name, 'Apellido (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
+    <div class="col-sm-6 col-md-6 col-lg-4">
       <%= form.text_field :last_name, class: "form-control", required: true %>
     </div>
   </div>
   <div class="form-group row g-mb-10">
-    <%= form.label :name, 'Nombre (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
-    <div class="col-sm-9">
+    <%= form.label :name, 'Nombre (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
+    <div class="col-sm-6 col-md-6 col-lg-4">
       <%= form.text_field :name, class: "form-control", required: true %>
     </div>
   </div>
 
   <div class="form-group row g-mb-10">
-    <%= form.label :dni, 'DNI (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
-    <div class="col-sm-3">
-      <%= form.text_field :dni, class: "form-control form-control-md rounded-0", required: true, minlength: '8' %>
+    <%= form.label :dni, 'DNI', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
+    <div class="col-sm-6 col-md-6 col-lg-4">
+      <%= form.text_field :dni, class: "form-control", required: true, minlength: '8' %>
       <% if @person.errors[:dni].any? %>
         <small class="form-control-feedback"><%= @person.errors[:dni].first %></small>
       <% end %>
     </div>
-    <label class="form-check-inline u-check g-pl-25">
+    <label class="form-check-inline u-check g-pl-25 col-2">
       <%= form.check_box :dni_has_expiration %>
       Tiene vencimiento
     </label>
-    <%= form.label :expiration_date_dni,"Fecha vencimiento", class: "col-2 col-form-label"%>
+    <%= form.label :expiration_date_dni,"Fecha vencimiento", class: "col-2 col-sm-6 col-md-2 col-form-label"%>
     <div class="col-3">
       <%= form.date_field :expiration_date_dni, class: "form-control rounded-0 form-control-md" %>
     </div>
@@ -42,7 +42,7 @@
   </div>
 
   <div class="form-group row g-mb-10">
-    <%= form.label :cuil, 'CUIL (*)', class: "col-sm-2 col-form-label g-mb-10"%><br>
+    <%= form.label :cuil, 'CUIL (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10"%><br>
     <div class="col-sm-3">
       <%= form.text_field :cuil, class: "form-control", minlength: '11', required: true  %>
     </div>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="form-group row g-mb-10">
-    <%= form.label :birth_date, "Fecha nacimiento (*)", class: "col-sm-2 col-form-label g-mb-10" %><br>
+    <%= form.label :birth_date, "Fecha nacimiento (*)", class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
     <div class="col-sm-3 input-group g-brd-primary--focus">
       <%= form.date_field :birth_date, class: "form-control" %>
     </div>
@@ -62,26 +62,26 @@
   </div>
 
   <div class="form-group row g-mb-10">
-    <%= form.label :nationality, 'Nacionalidad (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
+    <%= form.label :nationality, 'Nacionalidad (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
     <div class="col-sm-9">
       <%= form.text_field :nationality, class: "form-control" %>
     </div>
   </div>
   <div class="form-group row g-mb-10">
-    <%= form.label :direction, 'Domicilio (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
+    <%= form.label :direction, 'Domicilio (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
     <div class="col-sm-9">
       <%= form.text_field :direction, class: "form-control" %>
     </div>
   </div>
   <div class="form-group row g-mb-10">
-    <%= form.label :phone, 'Telefono (*)', class: "col-sm-2 col-form-label g-mb-10" %><br>
+    <%= form.label :phone, 'Telefono (*)', class: "col-sm-3 col-md-2 col-form-label g-mb-10" %><br>
     <div class="col-sm-9">
       <%= form.text_field :phone, class: "form-control" %>
     </div>
   </div>
   <div class="form-group row">
     <div class="col-6">
-      <%= form.label :company, "Pertenece a: (*)", class: "col-sm-2 col-form-label g-mb-10" %>
+      <%= form.label :company, "Pertenece a: (*)", class: "col-sm-3 col-md-2 col-form-label g-mb-10" %>
     </div>
     <div class="col-6">
       <select name="person[company_id]" id="person_company_id" class="select-2-company">
