--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Person</h1>
 
-<%= render 'form', person: @person %>
-
-<%= link_to 'Back', people_path %>
+<section class="container">
+	<h1 class="h1">Registrar persona</h1>
+	<%= render 'form', person: @person %>
+</section>
