--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Person</h1>
+<h1>Editar persona</h1>
 
 <%= render 'form', person: @person %>
-
-<%= link_to 'Show', @person %> |
-<%= link_to 'Back', people_path %>
