Add more data to table

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -17,8 +17,12 @@
             <th>Apellido</th>
             <th>Nombre</th>
             <th>DNI</th>
+            <th>PDF DNI</th>
+            <th>Vence DNI</th>
             <th>Cuil</th>
+            <th>PDF CUIL</th>
             <th>Fecha nac</th>
+            <th>PDF Alta</th>
             <th>Nacionalidad</th>
             <th>Domicilio</th>
             <th>Telefono</th>
